force-app/main/default/objects/Appointment__c/fields/Appointment_date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_date__c</fullName>
    <label>Appointment date</label>
    <type>Date</type>
</CustomField>