force-app/main/default/objects/Appointment__c/fields/Descreption__c.field-meta.xml
<CustomField>
    <fullName>Descreption__c</fullName>
    <label>Descreption</label>
    <length>100</length>
    <type>Text</type>
</CustomField>