force-app/main/default/objects/Appointment__c/fields/Paitent__c.field-meta.xml
<CustomField>
    <fullName>Paitent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paitent</label>
    <referenceTo>Paitent__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>